--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   cloud_firestore: ^4.17.5
   firebase_storage: ^11.7.7
 
-  # firebase_messaging: ^14.9.4
+  firebase_messaging: ^14.9.4
   # flutter_local_notifications: ^17.1.1
   # timeago: ^3.6.0
   # emoji_picker_flutter: ^2.1.1
