--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   firebase_messaging: ^14.9.4
   # flutter_local_notifications: ^17.1.1
   # timeago: ^3.6.0
-  # emoji_picker_flutter: ^2.1.1
+  emoji_picker_flutter: ^2.1.0
   # flutter_stripe: ^10.1.0
 
 dev_dependencies:
